--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,6 @@ services:
   dns:
     - 77.88.8.1
     - 77.88.8.2
-    - 77.88.8.3
-    - 77.88.8.7
-    - 77.88.8.8
-    - 77.88.8.88
   extra_hosts:
     - 12-kanal.ru:109.194.112.233
     - 360tv.ru:95.213.164.20
@@ -33,6 +29,7 @@ services:
     - politcentr.ru:87.236.16.126
     - russia-insider.com:158.69.116.70
     - sbarro-pizza.ru:185.165.123.36
+    - thesaker.is:23.111.129.34
     - www.voltairenet.org:65.108.13.235
     - wpristav.com:193.109.246.53
   image: fluxstate/ptndown-sp-pia
